# Git_llm_pick

./: .gitignore  .pylintrc  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: basic-ci.yml  codeql.yml  coverage-check.yml  trufflehog.yml
doc/: conf.py  index.rst
src/git_llm_pick/: __init__.py  git_commands.py  git_llm_pick.py  llm_client.py  llm_patching.py  markdown_parser.py  patch_matching.py  utils.py
src/git_llm_pick/llm_scripts/: __init__.py  hunk_patching.md  section_patching.md
src/linux_kernel_commit_relations/: __init__.py  commit_context.py  missing_fixes.py  relations.py  summary_context.py
src/linux_kernel_commit_relations/cli/: __init__.py  linux_commit_backporter.py
test/: README.md  test-in-venv.sh  test_backporter_cli.py  test_char_filtering.py  test_commit_parsing.py  test_git_llm_pick.py  test_linux_kernel_commit_relations.py  test_llm_cli.py  test_llm_cli_patching.py  test_llm_client_caching.py  test_llm_patching.py  test_llm_templates.py  test_markdown_parser.py  test_patch_matching.py  test_path_validation.py  test_utils.py
test/misc/: AL2023-dockerfile  README  commits-with-manual-fixes-range-v6.1.142..kernel-6.1.147-172.266.amzn2023.txt  glp-test-6.1.125-stable-backporting.sh  glp-test-6.1.142-fixes-backporting.sh  run_in_container.sh  upstream-commits-with-fixes-range-v6.1.142..kernel-6.1.147-172.266.amzn2023.txt  v6.1.125-commits-to-apply.txt
test/patch_artifacts/cli_patching/: lib-v1.c  lib-v2.c  lib-v3.c  patch_cache.json
test/patch_artifacts/hunk_patching/: base.c  div.patch  patch_cache.json
