# SPDX-License-Identifier: Apache-2.0

[metadata]
name = git-llm-pick
version = 1.0.0
description = A drop-in replacement for git cherry-pick with LLM-powered conflict resolution
long_description = file: README.md
long_description_content_type = text/markdown
author = Norbert Manthey
author_email = nmanthey@amazon.de
license = Apache-2.0
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Version Control :: Git

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    boto3>=1.28.0
    levenshtein>=0.12.2
    unidiff>=0.7.0
    build>=1.0.0

[options.packages.find]
where = src
exclude =
    test

[options.package_data]
git_llm_pick =
    py.typed
    llm_scripts/*.md

[options.extras_require]
test =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    coverage>=7.0.0
dev =
    black>=23.0.0
    isort>=5.0.0
    mypy>=1.0.0
    pylint>=3.0.0
    flake8>=7.0.0
    pep8-naming>=0.13.0
    sphinx>=7.0.0

[options.entry_points]
console_scripts =
    gfp = git_llm_pick.git_llm_pick:main
    git-fuzzy-pick = git_llm_pick.git_llm_pick:main
    glp = git_llm_pick.git_llm_pick:main
    git-llm-pick = git_llm_pick.git_llm_pick:main

# Configuration for pytest
[tool:pytest]
xfail_strict = true
addopts =
    --verbose
    --cov git_llm_pick
    --cov-config setup.cfg
    --cov-report term-missing
    --cov-report html:htmlcov
    --cov-report xml:coverage.xml
    --durations=5
    --color=yes
    --cov-fail-under=65
testpaths = test

# Coverage configuration
[coverage:run]
branch = true
source = src/

[coverage:paths]
source =
    src/

[coverage:html]
directory = htmlcov

[coverage:xml]
output = coverage.xml

# Code formatting configuration
[flake8]
ignore =
    # Not pep8, black adds whitespace before ':'
    E203,
    # Not pep8, black adds line break before binary operator
    W503,
    # Once `bb format` is done with things, the only remaining long lines do not
    # matter; we can ignore them.
    E501,
max_line_length = 120
exclude =
    build,
    dist,
    .git,
    __pycache__,
    .pytest_cache,
    .coverage,
    htmlcov,
    .venv*